# perf-event-rs

./: Cargo.toml  Makefile  README.md  bindgen.sh  build.rs  select-feature.sh  wrapper.h
.github/actions/add-target/: action.yml
.github/actions/check/: action.yml
.github/actions/install-linux-headers/: action.yml
.github/actions/replace-version/: action.yml
.github/actions/test/: action.yml
.github/workflows/: build-dev-auto-feature.yml  build-dev.yml
src/: lib.rs
src/infra/: array.rs  box.rs  infer.rs  mod.rs  null_terminated.rs  option.rs  ptr.rs  result.rs  sized.rs  slice.rs  vec.rs  vla.rs  zero_terminated.rs  zt.rs
src/perf_event/: attr.rs  builder.rs  config.rs  counting_attr.rs  hw_event.rs  mod.rs  mode.rs  sw_event.rs
src/perf_event/counting/: attr.rs  builder.rs  group.rs  hw_event.rs  mod.rs  single.rs  sw_event.rs
src/perf_event/counting/attr/: extra_config.rs  mod.rs  new.rs
src/perf_event/counting/config/: extra_config.rs  mod.rs  new.rs
src/perf_event/counting/event/: hw_event.rs  mod.rs  raw_event.rs  sw_event.rs
src/perf_event/counting/group/: fixed.rs  guard.rs  inner.rs  mod.rs  result.rs  stat.rs
src/perf_event/counting/group/tests/: hardware.rs  mod.rs  software.rs
src/perf_event/counting/single/: mod.rs  stat.rs
src/perf_event/counting/tests/: mod.rs
src/perf_event/event/: breakpoint.rs  dynamic_pmu.rs  hardware.rs  hw.rs  hw_event.rs  mod.rs  raw.rs  raw_event.rs  scope.rs  software.rs  sw.rs  sw_event.rs  tracepoint.rs
src/perf_event/event/tracing/: breakpoint.rs  dynamic_pmu.rs  mod.rs  tracepoint.rs
src/perf_event/sampling/: attr.rs  builder.rs  group.rs  mod.rs  record.rs  single.rs
src/perf_event/sampling/attr/: extra_config.rs  extra_record.rs  mod.rs  new.rs  sample_record_fields.rs
src/perf_event/sampling/config/: extra_config.rs  extra_record.rs  mod.rs  new.rs  sample_record_fields.rs
src/perf_event/sampling/group/: fixed.rs  guard.rs  inner.rs  mod.rs  stat.rs
src/perf_event/sampling/record/: aux.rs  aux_output_hw_id.rs  bpf_event.rs  cgroup.rs  comm.rs  exit.rs  fork.rs  intrace_start.rs  ksymbol.rs  lost.rs  lost_samples.rs  mmap.rs  mmap2.rs  mod.rs  namespaces.rs  read.rs  sample.rs  switch.rs  switch_cpu_wide.rs  text_poke.rs  throttle.rs  unthrottle.rs
src/perf_event/sampling/single/: into_iter.rs  iter.rs  mod.rs  next_record.rs  next_sample.rs  stat.rs
src/perf_event/tracing/: builder.rs  into_iter.rs  iter.rs  mod.rs
src/perf_event/tracing/attr/: mod.rs  new.rs
src/perf_event/tracing/config/: mod.rs  new.rs
src/perf_event/tracing/event/: breakpoint.rs  dynamic_pmu.rs  tracepoint.rs
src/perf_event/tracing/tests/: breakpoint.rs  mod.rs  tracepoint.rs
src/perf_event/tracing/tracer/: into_iter.rs  iter.rs  mod.rs
src/syscall/: bindings.rs  bindings_impl.rs  mod.rs  wrapped.rs
src/syscall/bindings/: .gitignore  mod.rs  read_format.rs
src/syscall/bindings/impl/: mod.rs  perf_event_attr.rs  perf_event_attr__bindgen_ty_1.rs  perf_event_attr__bindgen_ty_2.rs  perf_event_attr__bindgen_ty_3.rs  perf_event_attr__bindgen_ty_4.rs  perf_event_mmap_page.rs  perf_event_mmap_page__bindgen_ty_1.rs  perf_sample_weight.rs
src/test/: mod.rs
(+136 files in other folders)
