[package]
name = "perf-event-rs"
version = "0.0.0"
edition = "2021"
description = "Linux perf event in Rust without unsafe"
license = "MIT"
repository = "https://github.com/OptimatistOpenSource/perf-event-rs.git"
keywords = ["binding", "event", "perf"]
categories = ["API bindings"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["kernel-6.2"]

"kernel-6.2" = ["kernel-6.0"]
"kernel-6.0" = ["kernel-5.13"]
"kernel-5.13" = ["kernel-5.12"]
"kernel-5.12" = ["kernel-5.11"]
"kernel-5.11" = ["kernel-5.9"]
"kernel-5.9" = ["kernel-5.8"]
"kernel-5.8" = ["kernel-5.7"]
"kernel-5.7" = ["kernel-5.5"]
"kernel-5.5" = ["kernel-5.4"]
"kernel-5.4" = []

[build-dependencies]
bindgen = "0.68.1"

[dependencies]
memmap = "0.7.0"
libc = "0.2.148"
page_size = "0.6.0"

thiserror = "1.0.48"
