[package]
name = "perf-event-rs"
version = "0.0.0"
edition = "2021"
description = "Linux perf event in Rust without unsafe"
license = "MIT"
repository = "https://github.com/OptimatistOpenSource/perf-event-rs.git"
keywords = ["binding", "event", "perf"]
categories = ["api-bindings"]
build = "build/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
"linux-6.3" = ["linux-6.0"]
"linux-6.0" = ["linux-5.16"]
"linux-5.16" = ["linux-5.13"]
"linux-5.13" = ["linux-5.12"]
"linux-5.12" = ["linux-5.11"]
"linux-5.11" = ["linux-5.9"]
"linux-5.9" = ["linux-5.8"]
"linux-5.8" = ["linux-5.7"]
"linux-5.7" = ["linux-5.5"]
"linux-5.5" = ["linux-5.4"]
"linux-5.4" = ["linux-5.1"]
"linux-5.1" = ["linux-4.17"]
"linux-4.17" = ["linux-4.16"]
"linux-4.16" = ["linux-4.14"]
"linux-4.14" = ["linux-4.12"]
"linux-4.12" = ["linux-4.8"]
"linux-4.8" = ["linux-4.7"]
"linux-4.7" = ["linux-4.4"]
"linux-4.4" = ["linux-4.3"]
"linux-4.3" = ["linux-4.2"]
"linux-4.2" = ["linux-4.1"]
"linux-4.1" = ["linux-3.19"]
"linux-3.19" = ["linux-3.16"]
"linux-3.16" = ["linux-3.13"]
"linux-3.13" = ["linux-3.12"]
"linux-3.12" = []

[build-dependencies]
bindgen = "0.68.1"

[dependencies]
memmap2 = "0.9.3"
libc = "0.2.148"
page_size = "0.6.0"
rand = "0.8.5"

thiserror = "1.0.48"
